// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Triangle > renders an highlighted triangle 1`] = `
<DocumentFragment>
  <div
    class="info-bubble-triangle info-bubble-triangle-highlight"
  />
</DocumentFragment>
`;

exports[`Triangle > renders an unhighlighted triangle 1`] = `
<DocumentFragment>
  <div
    class="info-bubble-triangle"
  />
</DocumentFragment>
`;
